compiler/e2e/test/snapshot/borrow_checker/vec_push_ref_one/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mutable access is done while it is borrowed
   ╭─ compiler/e2e/test/snapshot/borrow_checker/vec_push_ref_one/main.pnx:27:9
   │
23 │     let p = &x
   │             -- the borrow starts here
   ·
27 │         x = 2
   │         ^^^^^ mutable access occurs here
   ·
31 │     consume(v)
   │             - the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
